@@ -1,4 +1,8 @@
 ================= Unreleased ==================
+; Change ; Minor ; Runtime; #5555
+Added so that the internal solver is re-initialized if inputs are
+changed in a co-simulation FMU.
+
 ; Change ; Minor ; Compiler ; #5549
 Moved static variable declarations for generated temporaries to
 generated struct in order to improve multithreading capabilities.
